--- a/templates/base.html
+++ b/templates/base.html
@@ -17,14 +17,14 @@
         <div class="first-header">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container">
-                    <a class="navbar-brand my-logo" href="javascript:void(0)">Blog.</a>
+                    <a class="navbar-brand my-logo" href="{% url 'home' %}">Blog.</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="mynavbar">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">Лента</a>
+                                <a class="nav-link" href="{% url 'home' %}">Лента</a>
                             </li>
                             <li class="nav-item dropdown category-item">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Категории</a>
@@ -36,9 +36,9 @@
                                   <li><a class="dropdown-item" href="#">Маркетинг</a></li>
                                   <li><a class="dropdown-item" href="#">Научпоп</a></li>
                                 </ul>
-                              </li>
+                            </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">О сайте</a>
+                                <a class="nav-link" href="{% url 'about' %}">О сайте</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="javascript:void(0)">Контакты</a>
