Удален файл 'Архитектура БД.drawio' из индекса

--- a/main/static/main/css/styles.css
+++ b/main/static/main/css/styles.css
@@ -1,4 +1,6 @@
 @import "authButton.css";
+@import "additional_style.css";
+
 .my-logo {
     font-family: "Roboto", sans-serif;
     font-size: 28px;
