--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                         </form>
                         <div class="auth-btn">
                             <a href="#login" class="text-white text-decoration-none px-3 py-1 rounded-2">Войти</a>
-                            <a href="#registration" class="text-black text-decoration-none px-3 py-1 rounded-2" 
+                            <a href="{% url 'registration' %}" class="text-black text-decoration-none px-3 py-1 rounded-2" 
                         style="background-color: white">Регистрация</a>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="d-flex gap-2">
                         <a href="#login" class="btn btn-outline-dark">Войти</a>
-                        <a href="#" class="btn btn-dark">Регистрация</a>
+                        <a href="{% url 'registration' %}" class="btn btn-dark">Регистрация</a>
                     </div>
                 </div>
             </nav>
