--- a/templates/base_2.html
+++ b/templates/base_2.html
@@ -27,13 +27,16 @@
                         </ul>
                         <div class="d-flex gap-2 auth-btn">
                             <a href="#login" class="btn btn-outline-light">Войти</a>
-                            <a href="#" class="btn btn-secondary">Регистрация</a>
+                            <a href="{% url 'registration' %}" class="btn btn-secondary">Регистрация</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
+    {% block content %}
+    {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
