--- a/templates/base_2.html
+++ b/templates/base_2.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <header>
+    <header style="position: relative;">
         <div class="first-header">
             <div class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container">
