--- a/main/templates/main/registration.html
+++ b/main/templates/main/registration.html
@@ -2,73 +2,62 @@
 
 {% block content %}
 
-<div class="vh-100 d-flex justify-content-center align-items-center">
-    <div class="rectangle offset-up">
-        <div class="inner-box container">
-            <div class="row d-flex align-items-center">
-                <div class="registration-title col-12">
-                    <h2>Регистрация</h2>
-                </div>
-            </div>
+<div class="registration-container container">
 
-            <div class="row align-items-center mt-3">
-                <div class="col-auto">
-                    <label for="specificSizeInputName" class="form-label">Имя</label>
-                    <input type="text" class="form-control" placeholder="Юрий" aria-label="Имя">
-                </div>
-                <div class="col-auto">
-                    <label for="specificSizeInputSurname" class="form-label">Фамилия</label>
-                    <input type="text" class="form-control" placeholder="Гагарин" aria-label="Фамилия">
-                </div>
-            </div>
+    <div class="section-title mb-3">Регистрация</div>
 
-            <div class="row align-items-center mt-3">
-                <div class="col-auto">
-                    <label for="birthDate" class="form-label">Дата рождения</label>
-                    <input type="date" class="form-control" placeholder="Юрий" aria-label="Дата рождения" style="width: 274px;">
-                </div>
-                <div class="col-auto">
-                    <label for="gender" class="form-label d-block">Пол</label>
-                    <div class="form-check form-check-inline">
-                        <input type="checkbox" class="form-check-input" id="male" value="male">
-                        <label for="male" class="form-check-label">Мужской</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input type="checkbox" class="form-check-input" id="female" value="female">
-                        <label for="female" class="form-check-label">Женский</label>
-                    </div>
-                </div>
-            </div>
+    <form class="row g-3">
 
-            <div class="row align-items-center mt-3">
-                <div class="col-auto">
-                    <label for="inputEmail4" class="form-label">E-mail</label>
-                    <input type="email" class="form-control" id="inputEmail4" placeholder="example@yandex.ru">
-                </div>
-                <div class="col-auto">
-                    <label for="inputNickname" class="form-label">Никнейм</label>
-                    <input type="text" class="form-control" id="inputNickname" placeholder="NickName" aria-label="Никнейм">
-                </div>
-            </div>
+        <div class="col-lg-6">
+            <label for="inputFirstName" class="form-label">Имя</label>
+            <input type="text" class="form-control" id="inputFirstName">
+        </div>
+        <div class="col-lg-6">
+            <label for="inputLastName" class="form-label">Фамилия</label>
+            <input type="text" class="form-control" id="inputLastName">
+        </div>
 
-            <div class="row align-items-center mt-3">
-                <div class="col-auto">
-                    <label for="inputPassword" class="form-label">Пароль</label>
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Придумайте пароль" required>
-                </div>
-                <div class="col-auto">
-                    <label for="confirmPassword" class="form-label">Повторите пароль</label>
-                    <input type="password" class="form-control" id="confirmPassword" placeholder="Повторите пароль" required>
-                </div>
+        <div class="col-lg-6">
+            <label for="inputEmail4" class="form-label">E-mail</label>
+            <input type="email" class="form-control" id="inputEmail4">
+        </div>
+        <div class="col-lg-6">
+            <span>Пол</span>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="gender" id="male" value="male">
+                <label class="form-check-label" for="male">
+                    Мужской
+                </label>
             </div>
-
-            <div class="row mt-4">
-                <div class="col-auto">
-                    <button class="btn text-bg-dark" type="submit">Зарегистрироваться</button>
-                </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="gender" id="female" value="female">
+                <label class="form-check-label" for="female">
+                    Женский
+                </label>
             </div>
         </div>
-    </div>
+
+        <div class="col-lg-6">
+            <label for="inputPassword4" class="form-label">Пароль</label>
+            <input type="password" class="form-control" id="inputPassword4" aria-describedby="passwordHelpInline">
+        </div>
+        <div class="help-class col-lg-6 mt-5">
+            <span id="passwordHelpInline" class="form-text fs-6">Должно быть 8-20 символов</span>
+        </div>
+        <div class="password-confirmation col-lg-6">
+            <label for="confirmPassword" class="form-label">Подтвердите пароль</label>
+            <input type="password" class="form-control" id="confirmPassword">
+        </div>
+        <div class="date-birth-class col-lg-6">
+            <label for="birthDate" class="form-label">Дата рождения</label>
+            <input type="date" class="form-control" id="birthDate" name="birthDate">
+        </div>
+        <div class="nickname-class col-lg-12">
+            <label for="inputNickname" class="form-label">Никнейм на сайте</label>
+            <input type="text" class="form-control" id="inputNickname">
+        </div>
+        <button type="submit" class="registration-button col-lg-2 btn btn-dark ms-2">Зарегистрироваться</button>
+    </form>
 </div>
 
 {% endblock %}
