--- a/main/templates/main/registration.html
+++ b/main/templates/main/registration.html
@@ -2,62 +2,77 @@
 
 {% block content %}
 
-<div class="registration-container container">
+    <section>
+        <div class="container mt-sm-5 pt-sm-5">
+            <div class="row">
+                <div class="col-12 col-sm-8 col-md-6 m-auto">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <span class="fs-3" style="font-weight: 500;">Регистрация</span>
+                            </div>
+                            <form class="row g-3">
 
-    <div class="section-title mb-3">Регистрация</div>
-
-    <form class="row g-3">
-
-        <div class="col-lg-6">
-            <label for="inputFirstName" class="form-label">Имя</label>
-            <input type="text" class="form-control" id="inputFirstName">
-        </div>
-        <div class="col-lg-6">
-            <label for="inputLastName" class="form-label">Фамилия</label>
-            <input type="text" class="form-control" id="inputLastName">
-        </div>
-
-        <div class="col-lg-6">
-            <label for="inputEmail4" class="form-label">E-mail</label>
-            <input type="email" class="form-control" id="inputEmail4">
-        </div>
-        <div class="col-lg-6">
-            <span>Пол</span>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="gender" id="male" value="male">
-                <label class="form-check-label" for="male">
-                    Мужской
-                </label>
+                                <div class="col-lg-6">
+                                    <label for="inputFirstName" class="form-label">Имя</label>
+                                    <input type="text" class="form-control" id="inputFirstName">
+                                </div>
+                                <div class="col-lg-6">
+                                    <label for="inputLastName" class="form-label">Фамилия</label>
+                                    <input type="text" class="form-control" id="inputLastName">
+                                </div>
+                        
+                                <div class="col-lg-6">
+                                    <label for="inputEmail4" class="form-label">E-mail</label>
+                                    <input type="email" class="form-control" id="inputEmail4">
+                                </div>
+                                <div class="col-lg-6">
+                                    <span>Пол</span>
+                                    <div class="d-flex align-items-center gap-3 mt-3">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="gender" id="male" value="male">
+                                            <label class="form-check-label" for="male">
+                                                Мужской
+                                            </label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="gender" id="female" value="female">
+                                            <label class="form-check-label" for="female">
+                                                Женский
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                        
+                                <div class="col-lg-6">
+                                    <label for="inputPassword4" class="form-label">Пароль</label>
+                                    <input type="password" class="form-control" id="inputPassword4" aria-describedby="passwordHelpInline">
+                                </div>
+                                <div class="help-class col-lg-6 mt-5">
+                                    <span id="passwordHelpInline" class="form-text fs-6">Должно быть 8-20 символов</span>
+                                </div>
+                                <div class="password-confirmation col-lg-6">
+                                    <label for="confirmPassword" class="form-label">Подтвердите пароль</label>
+                                    <input type="password" class="form-control" id="confirmPassword">
+                                </div>
+                                <div class="date-birth-class col-lg-6">
+                                    <label for="birthDate" class="form-label">Дата рождения</label>
+                                    <input type="date" class="form-control" id="birthDate" name="birthDate">
+                                </div>
+                                <div class="nickname-class col-lg-12">
+                                    <label for="inputNickname" class="form-label">Никнейм на сайте</label>
+                                    <input type="text" class="form-control" id="inputNickname">
+                                </div>
+                                <div class="mt-3">
+                                    <button type="submit" class="btn btn-dark mb-3">Зарегистрироваться</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="gender" id="female" value="female">
-                <label class="form-check-label" for="female">
-                    Женский
-                </label>
-            </div>
         </div>
-
-        <div class="col-lg-6">
-            <label for="inputPassword4" class="form-label">Пароль</label>
-            <input type="password" class="form-control" id="inputPassword4" aria-describedby="passwordHelpInline">
-        </div>
-        <div class="help-class col-lg-6 mt-5">
-            <span id="passwordHelpInline" class="form-text fs-6">Должно быть 8-20 символов</span>
-        </div>
-        <div class="password-confirmation col-lg-6">
-            <label for="confirmPassword" class="form-label">Подтвердите пароль</label>
-            <input type="password" class="form-control" id="confirmPassword">
-        </div>
-        <div class="date-birth-class col-lg-6">
-            <label for="birthDate" class="form-label">Дата рождения</label>
-            <input type="date" class="form-control" id="birthDate" name="birthDate">
-        </div>
-        <div class="nickname-class col-lg-12">
-            <label for="inputNickname" class="form-label">Никнейм на сайте</label>
-            <input type="text" class="form-control" id="inputNickname">
-        </div>
-        <button type="submit" class="registration-button col-lg-2 btn btn-dark ms-2">Зарегистрироваться</button>
-    </form>
-</div>
+    </section>
 
 {% endblock %}
+
