--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="{% static 'main/css/styles.css' %}">
 </head>
@@ -18,9 +19,12 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container">
                     <a class="navbar-brand my-logo" href="{% url 'home' %}">Blog.</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                    <div class="d-flex gap-3 align-items-center">
+                        <a href="{% url 'article_writing' %}" class="write-button nav-link d-lg-none"><i class="fa-regular fa-pen-to-square fs-5 text-white"></i></a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
                     <div class="collapse navbar-collapse" id="mynavbar">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item">
@@ -49,7 +53,7 @@
                             <button class="btn text-bg-secondary" type="button">Поиск</button>
                         </form>
                         <div class="auth-btn">
-                            <a href="#login" class="text-white text-decoration-none px-3 py-1 rounded-2">Войти</a>
+                            <a href="{% url 'login' %}" class="text-white text-decoration-none px-3 py-1 rounded-2">Войти</a>
                             <a href="{% url 'registration' %}" class="text-black text-decoration-none px-3 py-1 rounded-2" 
                         style="background-color: white">Регистрация</a>
                         </div>
@@ -81,9 +85,12 @@
                                 <a class="nav-link" href="javascript:void(0)">Научпоп</a>
                             </li>
                         </ul>
+                        <div class="me-4">
+                            <a href="{% url 'article_writing' %}" class="nav-link"><i class="fa-regular fa-pen-to-square fs-4"></i></a>
+                        </div>
                     </div>
                     <div class="d-flex gap-2">
-                        <a href="#login" class="btn btn-outline-dark">Войти</a>
+                        <a href="{% url 'login' %}" class="btn btn-outline-dark">Войти</a>
                         <a href="{% url 'registration' %}" class="btn btn-dark">Регистрация</a>
                     </div>
                 </div>
