--- a/templates/base_2.html
+++ b/templates/base_2.html
@@ -5,11 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>О сайте</title>
+    <title>{{ title }}</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'main/css/styles.css' %}">
 </head>
-<body>
+<body style="height: 100%; margin: 0;">
     
     <header style="position: relative;">
         <div class="first-header">
@@ -26,7 +27,7 @@
                             <li class="nav-item"><a href="#" class="nav-link">Контакты</a></li>
                         </ul>
                         <div class="d-flex gap-2 auth-btn">
-                            <a href="#login" class="btn btn-outline-light">Войти</a>
+                            <a href="{% url 'login' %}" class="btn btn-outline-light">Войти</a>
                             <a href="{% url 'registration' %}" class="btn btn-secondary">Регистрация</a>
                         </div>
                     </div>
