--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -12,8 +12,12 @@
                             <form action="#">
                                 <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Логин">
                                 <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Пароль">
-                                <div class="text-center mt-3">
-                                    <button class="btn btn-dark mb-3">Авторизация</button>
+                                <div class="mt-3 d-none d-lg-block">
+                                    <button class="btn btn-dark mb-3">Авторизоваться</button>
+                                    <a href="#" class="nav-link">Уже есть аккаунт?</a>
+                                </div>
+                                <div class="text-center mt-3 d-block d-lg-none">
+                                    <button class="btn btn-dark mb-3">Авторизоваться</button>
                                     <a href="#" class="nav-link">Уже есть аккаунт?</a>
                                 </div>
                             </form>
