--- a/main/templates/main/registration.html
+++ b/main/templates/main/registration.html
@@ -63,7 +63,10 @@
                                     <label for="inputNickname" class="form-label">Никнейм на сайте</label>
                                     <input type="text" class="form-control" id="inputNickname">
                                 </div>
-                                <div class="mt-3">
+                                <div class="mt-3 d-none d-lg-block">
+                                    <button type="submit" class="btn btn-dark mb-3">Зарегистрироваться</button>
+                                </div>
+                                <div class="mt-3 d-block d-lg-none text-center">
                                     <button type="submit" class="btn btn-dark mb-3">Зарегистрироваться</button>
                                 </div>
                             </form>
