--- a/main/templates/main/write_article.html
+++ b/main/templates/main/write_article.html
@@ -1,5 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Написание статьи</h1>
+
+    <div class="container mt-sm-5">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header h5">
+                        Создание статьи
+                    </div>
+                </div>
+            </div>
+            <form method="POST">
+                {% csrf_token %}
+                {% for form_row in form %}
+                    <div class="col-sm-6 mt-4 h6">
+                        {{ form_row.label_tag }}
+                        {{ form_row }}
+                    </div>
+                {% endfor %}
+                <button type="submit" class="btn btn-dark mt-4">Опубликовать</button>
+            </form>            
+        </div>
+    </div>
+
 {% endblock %}
