--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load blog_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,7 +8,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
-  {{ form.media }}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="{% static 'main/css/styles.css' %}">
@@ -33,14 +33,7 @@
                             </li>
                             <li class="nav-item dropdown category-item">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Категории</a>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#">Разработка</a></li>
-                                  <li><a class="dropdown-item" href="#">Администрирование</a></li>
-                                  <li><a class="dropdown-item" href="#">Дизайн</a></li>
-                                  <li><a class="dropdown-item" href="#">Менеджмент</a></li>
-                                  <li><a class="dropdown-item" href="#">Маркетинг</a></li>
-                                  <li><a class="dropdown-item" href="#">Научпоп</a></li>
-                                </ul>
+                                {% show_categories "dropdown-menu" %}
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'about' %}">О сайте</a>
@@ -66,26 +59,7 @@
             <nav class="navbar navbar-expand-sm text-bg-light border-bottom border-dark">
                 <div class="container">
                     <div class="collapse navbar-collapse" id="mynavbar">
-                        <ul class="navbar-nav me-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">Разработка</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">Администрирование</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">Дизайн</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">Менеджмент</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">Маркетинг</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">Научпоп</a>
-                            </li>
-                        </ul>
+                        {% show_categories "navbar-nav me-auto" %}
                         <div class="me-4">
                             <a href="{% url 'article_writing' %}" class="nav-link"><i class="fa-regular fa-pen-to-square fs-4"></i></a>
                         </div>
