1) Добавлена функция подсвечивания категории при нажатии 2) Функция представления показа категории

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
             <nav class="navbar navbar-expand-sm text-bg-light border-bottom border-dark">
                 <div class="container">
                     <div class="collapse navbar-collapse" id="mynavbar">
-                        {% show_categories "navbar-nav me-auto" %}
+                        {% show_categories "navbar-nav me-auto" cat_selected %}
                         <div class="me-4">
                             <a href="{% url 'article_writing' %}" class="nav-link"><i class="fa-regular fa-pen-to-square fs-4"></i></a>
                         </div>
