--- a/main/templates/main/list_categories.html
+++ b/main/templates/main/list_categories.html
@@ -7,7 +7,7 @@
 
         {% if ul_class == "navbar-nav me-auto" %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'show_category' category.slug %}">{{ category.name }}</a>
+                <a class="nav-link {% if category.id == cat_selected %}active{% endif %}" href="{% url 'show_category' category.slug %}">{{ category.name }}</a>
             </li>
         {% endif %}
 
