--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     <div class="collapse navbar-collapse" id="mynavbar">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'home' %}">Лента</a>
+                                <a class="nav-link {% if cat_selected == 0 or cat_selected is None %}active{% endif %}" href="{% url 'home' %}">Лента</a>
                             </li>
                             <li class="nav-item dropdown category-item">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Категории</a>
