--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% for article in articles %}
-    <div class="container mt-5 mb-5">
+    <div class="container mt-sm-5 mt-2 mb-5">
         <div class="row border border border-sm-black rounded gy-3">
             <div class="col-12 d-flex gap-2">
                 <div class="avatar"><i class="fa-solid fa-user-ninja"></i></div>
@@ -18,10 +18,10 @@
                         style="font-size: 15px">{{ article.category }}</i></div>
             </div>
             <div class="col-12">
-                <div class="article-content">{{ article.content|linebreaks }}</div>
+                <div class="article-content">{{ article.content|linebreaks|truncatechars:250 }}</div>
             </div>
-            <div class="col-12 mb-3">
-                <div class="feedback d-flex gap-3">
+            <div class="col-12 mb-3 d-flex justify-content-between">
+                <div class="feedback d-flex gap-3 mt-3">
                     <div class="likes">
                         <i class="fa-solid fa-heart"></i>
                         2
@@ -31,6 +31,7 @@
                         1
                     </div>
                 </div>
+                <div><button type="button" class="btn btn-dark">Читать полностью</button></div>
             </div>
         </div>
     </div>
