1) При нажатии на кнопку прочтения статьи, пользователь будет переходить на страницу с этой статьёй

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -31,7 +31,9 @@
                         1
                     </div>
                 </div>
-                <div><button type="button" class="btn btn-dark">Читать полностью</button></div>
+                <div>
+                    <a href="{{ article.get_absolute_url }}" class="btn btn-dark">Читать полностью</a>
+                </div>
             </div>
         </div>
     </div>
