--- a/main/templates/main/article.html
+++ b/main/templates/main/article.html
@@ -2,7 +2,13 @@
 
 {% block content %}
 
-    <h1>{{ article.title }}</h1>
-    {{ article.content|linebreaks }}
+    <div class="container mt-sm-5 mt-1">
+        <div class="card">
+            <div class="card-body">
+                <h1>{{ article.title }}</h1>
+                {{ article.content|linebreaks }}
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
