--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
 
 <body>
 
-    <header>
-        <div class="first-header">
+    <div class="header">
+        <div class="first-header sticky-sm-top sticky-top">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container">
                     <a class="navbar-brand my-logo" href="{% url 'home' %}">Blog.</a>
@@ -71,10 +71,10 @@
                 </div>
             </nav>
         </div>
-    </header>
 
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
