--- a/main/templates/main/list_categories.html
+++ b/main/templates/main/list_categories.html
@@ -2,12 +2,12 @@
     {% for category in categories %}
 
         {% if ul_class == "dropdown-menu" %}
-            <li><a class="dropdown-item" href="{% url 'show_category' category.slug %}">{{ category.name }}</a></li>
+            <li><a class="dropdown-item" href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
         {% endif %}
 
         {% if ul_class == "navbar-nav me-auto" %}
             <li class="nav-item">
-                <a class="nav-link {% if category.id == cat_selected %}active{% endif %}" href="{% url 'show_category' category.slug %}">{{ category.name }}</a>
+                <a class="nav-link {% if category.id == cat_selected %}active{% endif %}" href="{{ category.get_absolute_url }}">{{ category.name }}</a>
             </li>
         {% endif %}
 
