--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,7 @@
     {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'main/js/js_radio_collapse.js' %}"></script>
 </body>
 
 </html>         
