При вводе данных в процессе авторизации происходит валидация, пользователя перекидывает на главную страницу сайта

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,8 @@
                             <button class="btn text-bg-secondary" type="button">Поиск</button>
                         </form>
                         <div class="auth-btn">
-                            <a href="{% url 'login' %}" class="text-white text-decoration-none px-3 py-1 rounded-2">Войти</a>
-                            <a href="{% url 'registration' %}" class="text-black text-decoration-none px-3 py-1 rounded-2" 
+                            <a href="{% url 'users:login' %}" class="text-white text-decoration-none px-3 py-1 rounded-2">Войти</a>
+                            <a href="{% url 'users:logout' %}" class="text-black text-decoration-none px-3 py-1 rounded-2" 
                         style="background-color: white">Регистрация</a>
                         </div>
                     </div>
@@ -65,8 +65,8 @@
                         </div>
                     </div>
                     <div class="d-flex gap-2">
-                        <a href="{% url 'login' %}" class="btn btn-outline-dark">Войти</a>
-                        <a href="{% url 'registration' %}" class="btn btn-dark">Регистрация</a>
+                        <a href="{% url 'users:login' %}" class="btn btn-outline-dark">Войти</a>
+                        <a href="{% url 'users:logout' %}" class="btn btn-dark">Регистрация</a>
                     </div>
                 </div>
             </nav>
