--- a/templates/base_2.html
+++ b/templates/base_2.html
@@ -27,8 +27,8 @@
                             <li class="nav-item"><a href="#" class="nav-link">Контакты</a></li>
                         </ul>
                         <div class="d-flex gap-2 auth-btn">
-                            <a href="{% url 'login' %}" class="btn btn-outline-light">Войти</a>
-                            <a href="{% url 'registration' %}" class="btn btn-secondary">Регистрация</a>
+                            <a href="{% url 'users:login' %}" class="btn btn-outline-light">Войти</a>
+                            <a href="{% url 'users:logout' %}" class="btn btn-secondary">Регистрация</a>
                         </div>
                     </div>
                 </div>
