--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,7 +1,7 @@
 {% extends "base_2.html" %}
 
 {% block content %}
-
+    
     <section>
         <div class="container mt-5 pt-5">
             <div class="row">
@@ -9,12 +9,18 @@
                     <div class="card">
                         <div class="card-body">
                             <span class="fs-3" style="font-weight: 500;">Авторизация</span>
-                            <form action="#">
-                                {{ forms.as_p }}
-                                <div class="mt-3 d-none d-lg-block">
-                                    <button class="btn btn-dark mb-3">Авторизоваться</button>
+                            <form method="POST">
+                                {% csrf_token %}
+                                {% for form_row in form %}
+                                    {{ form_row }}
+                                {% endfor %}
+                                <!-- <input type="text" class="form-control my-4 py-2" placeholder="Логин">
+                                <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Пароль"> -->
+                                <!-- <div class="mt-3 d-none d-lg-block">
+                                    <button type="submit" value="login" class="btn btn-dark mb-3">Авторизоваться</button>
                                     <a href="#" class="nav-link">Уже есть аккаунт?</a>
-                                </div>
+                                </div> -->
+                                <button type="submit" value="login" class="btn btn-dark mb-3">Авторизоваться</button>
                                 <div class="text-center mt-3 d-block d-lg-none">
                                     <button class="btn btn-dark mb-3">Авторизоваться</button>
                                     <a href="#" class="nav-link">Уже есть аккаунт?</a>
@@ -25,6 +31,6 @@
                 </div>
             </div>
         </div>
-    </section>
+</section>
 
 {% endblock %}
