--- a/templates/base.html
+++ b/templates/base.html
@@ -65,8 +65,13 @@
                         </div>
                     </div>
                     <div class="d-flex gap-2">
-                        <a href="{% url 'users:login' %}" class="btn btn-outline-dark">Войти</a>
-                        <a href="{% url 'users:logout' %}" class="btn btn-dark">Регистрация</a>
+                        {% if user.is_authenticated %}
+                            <strong class="mt-1 fs-5">{{ user.username }}</strong>
+                            <a href="{% url 'users:logout' %}" class="btn btn-outline-dark ms-3">Выйти</a>
+                        {% else %}
+                            <a href="{% url 'users:login' %}" class="btn btn-outline-dark">Войти</a>
+                            <a href="{% url 'users:logout' %}" class="btn btn-dark">Регистрация</a>
+                        {% endif %}
                     </div>
                 </div>
             </nav>
