--- a/templates/base_2.html
+++ b/templates/base_2.html
@@ -32,7 +32,7 @@
                             <a href="{% url 'users:logout' %}" class="btn btn-outline-dark ms-3">Выйти</a>
                             {% else %}
                             <a href="{% url 'users:login' %}" class="btn btn-outline-light">Войти</a>
-                            <a href="{% url 'users:logout' %}" class="btn btn-secondary">Регистрация</a>
+                            <a href="{% url 'users:registration' %}" class="btn btn-secondary">Регистрация</a>
                             {% endif %}
                         </div>
                     </div>
