--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="d-flex gap-2">
                         {% if user.is_authenticated %}
-                            <strong class="mt-1 fs-5">{{ user.username }}</strong>
+                            <a href="{% url 'users:profile' %}" class="btn btn-dark fs-6">{{ user.username }}</a>
                             <form method="POST" action="{% url 'users:logout' %}">
                                 {% csrf_token %}
                                 <button type="submit" class="btn btn-outline-dark ms-3">Выйти</button>
