Добавлена возможность редактирования данных пользователя

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -15,7 +15,7 @@
                 <p class="card-text"><strong>Электронная почта:</strong> {{ user.email }}</p>
                 <p class="card-text"><strong>Дата рождения:</strong> {{ user_profile.birthdate }}</p>
                 <p class="card-text"><strong>Пол:</strong> {{ user_profile.get_sex_display }}</p>
-                <div class="text-end"><a href="{% url 'edit_profile' pk=user.pk %}" class="btn btn-dark">Редактировать профиль</a></div>
+                <div class="text-end"><a href="{% url 'users:edit_profile' %}" class="btn btn-dark">Редактировать профиль</a></div>
             </div>
         </div>
     </div>
