--- a/main/static/main/css/styles.css
+++ b/main/static/main/css/styles.css
@@ -1,5 +1,6 @@
 @import "authButton.css";
 @import "additional_style.css";
+@import "trix_editor_style.css";
 
 body, html {
     height: 100%;
@@ -30,6 +31,7 @@ body, html {
     height: 1rem;
     width: 100%;
 }
+
 
 
 
