--- a/main/static/main/css/trix_editor_style.css
+++ b/main/static/main/css/trix_editor_style.css
@@ -3,8 +3,7 @@ trix-editor {
     width: 100%;
     font-weight: 400;
     font-size: 16px;
-    padding-top: 15px;
-    padding-left: 15px;
+    padding: 15px 15px;
 }
 
 .trix-editor-container {
@@ -33,3 +32,7 @@ trix-editor {
 #trix-toolbar-1 {
     margin-top: 5px;
 }
+
+h1 {
+    font-size: 20px;
+} 
